# redirects

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yaml
sphinxcontrib/redirects/: __init__.py
sphinxcontrib/redirects/tests/: conftest.py  test_redirects.py
sphinxcontrib/redirects/tests/roots/test-flat_dir/: test.rst
tests/: conftest.py  test_redirects.py
tests/roots/test-flat_dir/: index.rst  redirects
tests/roots/test-nested_dir/: index.rst  redirects
tests/roots/test-nested_dir/stuff/: index.rst
