[metadata]
name = sphinxcontrib-redirects
description-file = README.rst
author = Stephen Finucane
author-email = stephen@that.guru
summary = Sphinx redirects extension
home-page = https://github.com/sphinx-contrib/sphinxcontrib-redirects
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Documentation
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[extras]
sphinx =
    sphinx>=1.6  # BSD
    docutils>=0.11  # OSI-Approved Open Source, Public Domain

[flake8]
ignore = E128
