[metadata]
name = sphinxcontrib-redirects
summary = Sphinx extension to generate JavaScript-driven redirects for moved pages
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Stephen Finucane
author_email = stephen@that.guru
url = https://github.com/sphinx-contrib/sphinxcontrib-redirects
project_urls =
    Bug Tracker = https://github.com/sphinx-contrib/redirects/issues
    Source Code = https://github.com/sphinx-contrib/redirects
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Documentation
    Topic :: Utilities
python_requires = >=3.7
keywords = sphinx

[files]
packages =
    sphinxcontrib
namespace_packages =
    sphinxcontrib

[extras]
sphinx =
    sphinx  # BSD

[flake8]
max-line-length = 88
ignore = E128, W503
